fix splash footer spacing

--- a/app/assets/stylesheets/api/splash/splash.scss
+++ b/app/assets/stylesheets/api/splash/splash.scss
@@ -96,7 +96,7 @@ button:hover{
 
 .second-splash-component{
     background-color: white;
-    padding: 4%;
+    padding: 3%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -147,7 +147,7 @@ button:hover{
   .splash-nav-links {
       color: white;
       padding: 5px 20px 5px 5px;
-      font-size: 15px;
+      font-size: 18px;
       cursor: pointer;
       text-decoration: none;
       font-family: Arial, Helvetica, sans-serif;
